==> hello-yan3/STM32-learning/25-UCOSIII参考例程/3-UCOSIII综合例程/Drivers/BSP/AP3216C/ap3216c.c <==
#include "./BSP/AP3216C/ap3216c.h"

static void write_reg(uint8_t reg, uint8_t data)
{
  
  HAL_I2C_Mem_Write(&I2C_Handle, AP3216C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, &data, 1, 100);
  
}

static void read_regs(uint8_t reg, uint8_t len, uint8_t *buf)
{
  
  HAL_I2C_Mem_Read(&I2C_Handle, AP3216C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, buf, len, 100);
  
}

static void ap3216c_int_init(void)
{ 
    ap3216c_threshold_t threshold;    // 设置报警值阈值结构体
  
    threshold.min = 100;     // 光照下限产生报警
    threshold.max = 1000;    // 光照上限产生报警
    threshold.noises_time = 1;    // ALS 达到阈值后持续 threshold.noises_time * 4 个周期后开始报警， threshold.noises_time 最大为； 15
    set_als_threshold(AP3216C_ALS_LOW_THRESHOLD_L, threshold);    // 设置 ALS 的报警值
  
  
    threshold.min = 120;    // PS 低于 200 产生报警
    threshold.max = 600;    // PS 高于 500 产生报警
    set_ps_threshold(AP3216C_PS_LOW_THRESHOLD_L, threshold);     // 设置 PS 的报警值
}

void ap3216c_init(void)
{
    I2C_Mode_Config();

    /* reset ap3216c */
    ap3216c_set_param(AP3216C_SYSTEM_MODE, AP3216C_MODE_SW_RESET);  // 断电复位模式
    HAL_Delay(100);
    ap3216c_set_param(AP3216C_SYSTEM_MODE, AP3216C_MODE_ALS_AND_PS);  // ALS 和 PS+IR 功能已激活
    HAL_Delay(100); // delay at least  100ms

    /* 配置中断脚 和 中断数据	*/
    AP_INT_Config();
    ap3216c_int_init();
}
